[ztq] 1,添加药物循证维护模块 2，添加药物循证实体类

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>dch-document</module>
         <module>dch-pan</module>
         <module>dch-hdfs</module>
+        <module>dch-drug</module>
     </modules>
 
 
