--- a/dch-web/pom.xml
+++ b/dch-web/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>dch-pan</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.dch</groupId>
+            <artifactId>dch-drug</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>com.dch</groupId>-->
             <!--<artifactId>dch-hdfs</artifactId>-->
