--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>dch-pan</module>
         <module>dch-hdfs</module>
         <module>dch-drug</module>
+        <module>dch-cms</module>
     </modules>
 
 
