[ztq] 1，管网权限放开

--- a/dch-web/src/main/resources/dchealth.properties
+++ b/dch-web/src/main/resources/dchealth.properties
@@ -3,7 +3,7 @@ adminPath=/login.html
 #front path
 frontPath=/
 #login path
-loginPath=/app/rare/user-login-denglu.html
+loginPath=/index.html
 #reset new Password
 newPassword=123456
 
