lfx 前台数据检索 查询一级分类信息 根据分类id查询分类下的子分类 根据关键字进行分类信息查询 根据id获取检索分类详细信息 根据类别id获取分类类型字段信息

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>dch-hdfs</module>
         <module>dch-drug</module>
         <module>dch-cms</module>
+        <module>dch-solr</module>
     </modules>
 
 
