[skq] 1,solr索引库配置说明提交 2,药用植物维护模糊查询bug解决

--- a/dch-solr/src/main/resources/solr.properties
+++ b/dch-solr/src/main/resources/solr.properties
@@ -1,3 +1,4 @@
+#solr.Url=http://127.0.0.1:8983/solr/dch-web 这个是正式的 core0是测试的索引库
 solr.Url=http://127.0.0.1:8983/solr/core0
 solr.maxRetries=1
 solr.connectionTimeout=500
