--- a/dch-front/pom.xml
+++ b/dch-front/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>dch-solr</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.dch</groupId>
+            <artifactId>dch-drug</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>com.thoughtworks.xstream</groupId>
