--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>dch-drug</module>
         <module>dch-cms</module>
         <module>dch-solr</module>
+        <module>dch-disease</module>
     </modules>
 
 
