[ztq] 1，添加病例管理模块 2，添加病例管理实体类

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>dch-cms</module>
         <module>dch-solr</module>
         <module>dch-disease</module>
+        <module>dch-mr</module>
     </modules>
 
 
