--- a/dch-web/src/main/webapp/WEB-INF/web.xml
+++ b/dch-web/src/main/webapp/WEB-INF/web.xml
@@ -92,4 +92,8 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <error-page>
+        <error-code>404</error-code>
+        <location>/index.html</location>
+    </error-page>
 </web-app>
