--- a/dch-document/pom.xml
+++ b/dch-document/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>dch-base</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.dch</groupId>
+            <artifactId>dch-solr</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>com.thoughtworks.xstream</groupId>
