--- a/dch-web/pom.xml
+++ b/dch-web/pom.xml
@@ -18,6 +18,11 @@
         </dependency>
         <dependency>
             <groupId>com.dch</groupId>
+            <artifactId>dch-mr</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dch</groupId>
             <artifactId>dch-front</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
