[ztq] 1，redis基础模块集成

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>dch-solr</module>
         <module>dch-disease</module>
         <module>dch-mr</module>
+        <module>dch-redis</module>
     </modules>
 
 
