--- a/dch-web/pom.xml
+++ b/dch-web/pom.xml
@@ -64,6 +64,13 @@
             <artifactId>dch-disease</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.dch</groupId>
+            <artifactId>dch-redis</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+
         <!--<dependency>-->
             <!--<groupId>com.dch</groupId>-->
             <!--<artifactId>dch-hdfs</artifactId>-->
