--- a/dch-solr/pom.xml
+++ b/dch-solr/pom.xml
@@ -326,5 +326,10 @@
             <artifactId>activemq-all</artifactId>
             <version>5.14.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-core</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
