--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,18 @@
         <module>dch-mr</module>
         <module>dch-redis</module>
     </modules>
+    <dependencies>
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.1-api</artifactId>
+            <version>1.0.0.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dch</groupId>
+            <artifactId>dch-base</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 
     <properties>
