--- a/dch-web/pom.xml
+++ b/dch-web/pom.xml
@@ -69,7 +69,16 @@
             <artifactId>dch-redis</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.dch</groupId>
+            <artifactId>dch-project</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dch</groupId>
+            <artifactId>dch-template</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <!--<dependency>-->
             <!--<groupId>com.dch</groupId>-->
