lfx 内容管理添加用户的依赖

--- a/dch-cms/pom.xml
+++ b/dch-cms/pom.xml
@@ -321,6 +321,11 @@
             <groupId>com.mchange</groupId>
             <artifactId>c3p0</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.dch</groupId>
+            <artifactId>dch-sys</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
