--- a/dch-pan/pom.xml
+++ b/dch-pan/pom.xml
@@ -27,6 +27,11 @@
     <dependencies>
         <dependency>
             <groupId>com.dch</groupId>
+            <artifactId>dch-solr</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dch</groupId>
             <artifactId>dch-base</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
