--- a/dch-template/pom.xml
+++ b/dch-template/pom.xml
@@ -14,6 +14,11 @@
     <dependencies>
         <dependency>
             <groupId>com.dch</groupId>
+            <artifactId>dch-solr</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dch</groupId>
             <artifactId>dch-sys</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
