1.解决文件上传乱码问题 2.站内信接口代码上传提交

--- a/dch-front/pom.xml
+++ b/dch-front/pom.xml
@@ -323,6 +323,18 @@
             <groupId>com.mchange</groupId>
             <artifactId>c3p0</artifactId>
         </dependency>
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.4</version>
+            <classifier>jdk15</classifier>
+        </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.10.3</version>
+        </dependency>
+
     </dependencies>
 
 </project>
