--- a/dch-web/src/main/resources/dchealth.properties
+++ b/dch-web/src/main/resources/dchealth.properties
@@ -8,6 +8,8 @@ loginPath=/index.html
 newPassword=123456
 
 #default user role
-defaultRoleId=2
+defaultRoleId=8a0300ab5eb68582015eb6ac43f4000d
 #defaulst user module
-defaultModuleId=2
+defaultModuleId=8a0300ab5dbbba20015dbfe88f9800be
+projectContent="用户user创建了新的科研项目，项目信息：desc"
+joinProjectInfo="用户user加入了project科研项目组，项目信息:desc"
