--- a/dch-solr/src/main/resources/solr.properties
+++ b/dch-solr/src/main/resources/solr.properties
@@ -1,5 +1,7 @@
 #solr.Url=http://127.0.0.1:8983/solr/dch-web 这个是正式的 core0是测试的索引库
-solr.Url=http://127.0.0.1:8983/solr/core0
+solr.Url=http://42.123.123.211:8983/solr/core0
+mq.url=tcp://42.123.123.211:61616
+#solr.Url=http://10.33.3.68:8983/solr/core0
+#mq.url=tcp://10.33.3.68:61616
 solr.maxRetries=1
 solr.connectionTimeout=500
-mq.url=tcp://127.0.0.1:61616
