--- a/dch-cms/pom.xml
+++ b/dch-cms/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>dch-base</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.dch</groupId>
+            <artifactId>dch-sys</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>com.dch</groupId>
