--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,8 @@
         <shiro.version>1.2.2</shiro.version>
         <ehcache.version>2.6.6</ehcache.version>
         <!--<spring.version>3.2.5.RELEASE</spring.version>-->
-        <spring.version>4.0.8.RELEASE</spring.version>
+        <!--<spring.version>4.0.8.RELEASE</spring.version>-->
+        <spring.version>5.0.2.RELEASE</spring.version>
         <validator.version>5.1.1.Final</validator.version>
         <jetty.version>9.2.0.v20140526</jetty.version>
         <jetty_version>6.1.26</jetty_version>
@@ -59,10 +60,12 @@
         <cglib_version>2.2</cglib_version>
         <hibernate.version>4.3.8.Final</hibernate.version>
         <asm.version>3.3.1</asm.version>
-        <spring.data.jpa.version>1.4.3.RELEASE</spring.data.jpa.version>
+        <!--<spring.data.jpa.version>1.4.3.RELEASE</spring.data.jpa.version>-->
+        <spring.data.jpa.version>2.0.2.RELEASE</spring.data.jpa.version>
         <hibernate.validator.version>4.3.1.Final</hibernate.validator.version>
         <hadoop.version>2.7.3</hadoop.version>
         <spring.hadoop.version>2.5.0.RELEASE</spring.hadoop.version>
+        <spring.mongdb.version>2.0.2.RELEASE</spring.mongdb.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -525,8 +528,21 @@
                 <version>2.2.4</version>
             </dependency>
 
+            <!--mongodb-->
+            <dependency>
+                <groupId>org.springframework.data</groupId>
+                <artifactId>spring-data-mongodb</artifactId>
+                <version>${spring.mongdb.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
+    <repositories>
+        <repository>
+            <id>spring-milestone</id>
+            <name>Spring Maven MILESTONE Repository</name>
+            <url>http://repo.spring.io/libs-milestone</url>
+        </repository>
+    </repositories>
 
 </project>
