--- a/dch-util/pom.xml
+++ b/dch-util/pom.xml
@@ -31,16 +31,16 @@
     <dependencies>
             <!-- 日志文件管理包 -->
             <!-- log start -->
-            <dependency>
-                <groupId>log4j</groupId>
-                <artifactId>log4j</artifactId>
-                <version>${log4j.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>jcl-over-slf4j</artifactId>
-                <version>1.7.7</version>
-            </dependency>
+            <!--<dependency>-->
+                <!--<groupId>log4j</groupId>-->
+                <!--<artifactId>log4j</artifactId>-->
+                <!--<version>${log4j.version}</version>-->
+            <!--</dependency>-->
+            <!--<dependency>-->
+                <!--<groupId>org.slf4j</groupId>-->
+                <!--<artifactId>jcl-over-slf4j</artifactId>-->
+                <!--<version>1.7.7</version>-->
+            <!--</dependency>-->
             <!-- log end -->
 
         <!-- hibernate -->
