--- a/dch-redis/pom.xml
+++ b/dch-redis/pom.xml
@@ -24,13 +24,21 @@
     </repositories>
 
     <dependencies>
-
+        <dependency>
+            <groupId>com.dch</groupId>
+            <artifactId>dch-rdf</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>com.dch</groupId>
             <artifactId>dch-util</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.dch</groupId>
+            <artifactId>dch-base</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-redis</artifactId>
@@ -41,7 +49,15 @@
             <artifactId>jedis</artifactId>
             <version>2.7.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160810</version>
+        </dependency>
     </dependencies>
 
 
