--- a/dch-util/pom.xml
+++ b/dch-util/pom.xml
@@ -42,7 +42,6 @@
                 <!--<version>1.7.7</version>-->
             <!--</dependency>-->
             <!-- log end -->
-
         <!-- hibernate -->
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -130,6 +129,11 @@
             <groupId>org.crazycake</groupId>
             <artifactId>shiro-redis</artifactId>
             <version>2.4.2.1-RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>${poi.version}</version>
         </dependency>
         <!--<dependency>-->
             <!--<groupId>commons-logging</groupId>-->
