--- a/dch-util/pom.xml
+++ b/dch-util/pom.xml
@@ -133,7 +133,7 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
-            <version>${poi.version}</version>
+            <version>3.17</version>
         </dependency>
         <dependency>
             <groupId>net.sourceforge.pinyin4j</groupId>
