1，数据仓库建仓

--- a/dch-web/src/main/resources/db.properties
+++ b/dch-web/src/main/resources/db.properties
@@ -3,10 +3,10 @@
 #jdbc.driverClass=com.mysql.jdbc.Driver
 #jdbc.jdbcUrl=jdbc:mysql://10.131.128.43:3306/dch?serverTimezone=GMT%2b8&characterEncoding=utf-8
 #jdbc.jdbcUrl=jdbc:mysql://127.0.0.1:3306/dch?serverTimezone=GMT%2b8&characterEncoding=utf-8
-jdbc.user=dch
-jdbc.password=123456
+jdbc.user=root
+jdbc.password=skq123123
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.jdbcUrl=jdbc:mysql://10.33.3.68:3306/dch?serverTimezone=GMT%2b8&characterEncoding=utf-8
+jdbc.jdbcUrl=jdbc:mysql://10.1.85.36:3306/dch?serverTimezone=GMT%2b8&characterEncoding=utf-8
 #jdbc.user=root
 #jdbc.password=1234
 #jdbc.driverClass=com.mysql.jdbc.Driver
