--- a/dch-web/pom.xml
+++ b/dch-web/pom.xml
@@ -64,11 +64,11 @@
             <artifactId>dch-disease</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>com.dch</groupId>
-            <artifactId>dch-redis</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.dch</groupId>-->
+            <!--<artifactId>dch-redis</artifactId>-->
+            <!--<version>1.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>com.dch</groupId>
             <artifactId>dch-project</artifactId>
@@ -79,11 +79,11 @@
             <artifactId>dch-template</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>com.dch</groupId>
-            <artifactId>dch-rdf</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.dch</groupId>-->
+            <!--<artifactId>dch-rdf</artifactId>-->
+            <!--<version>1.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
         <!--<dependency>-->
             <!--<groupId>com.dch</groupId>-->
             <!--<artifactId>dch-hdfs</artifactId>-->
