1:报表统计接口优化 2:添加健康中国知识图谱查询功能

--- a/dch-rdf/src/main/resources/rdfdb.properties
+++ b/dch-rdf/src/main/resources/rdfdb.properties
@@ -1,4 +1,6 @@
 #windows
-windowdb.loc=D:/dch/jena/RDF/databases/drugdb
+windowdb.loc.drugdb=D:/dch/jena/RDF/databases/drugdb
+windowdb.loc.chinaHealth=D:/dch/jena/RDF/databases/chinaHealth
 #linux
-linuxdb.loc=/root/rdf/databases/drugdb
+linuxdb.loc.drugdb=/root/rdf/databases/drugdb
+linuxdb.loc.chinaHealth=/root/rdf/databases/chinaHealth
