1:添加根据表id导出表数据功能 2:添加用户自定义表清洗数据删除功能

--- a/dch-web/src/main/resources/dchealth.properties
+++ b/dch-web/src/main/resources/dchealth.properties
@@ -6,7 +6,8 @@ frontPath=/
 loginPath=/index.html
 #reset new Password
 newPassword=123456
-
+exportExcelPathLinux=/root/software/dch-gyx/excel
+exportExcelPathWindow=D:\\dch_gyx\\excel
 #default user role
 defaultRoleId=8a0300ab5eb68582015eb6ac43f4000d
 #defaulst user module
