--- a/dch-template/src/main/resources/mongodb.properties
+++ b/dch-template/src/main/resources/mongodb.properties
@@ -1,5 +1,5 @@
-#mongo.host=10.1.85.21
-mongo.host=10.1.85.36
+mongo.host=10.1.85.21
+#mongo.host=10.1.85.36
 mongo.port=27017
 mongo.defaultDbName=test
 mongo.user=test
@@ -22,7 +22,7 @@ mongo.maxConnectionLifeTime=0
 mongo.heartbeatSocketTimeout=1000
 mongo.heartbeatConnectTimeout=1500
 mongo.minHeartbeatFrequency=5
-mongo.heartbeatFrequency=10
+mongo.heartbeatFrequency=10000
 mongo.autoConnectRetry=true
 mongo.slaveOk=true
 mongo.writeNumber=1
