1:添加根据表id导出表数据功能 2:添加用户自定义表清洗数据删除功能

--- a/dch-solr/src/main/resources/solr.properties
+++ b/dch-solr/src/main/resources/solr.properties
@@ -1,7 +1,9 @@
 #solr.Url=http://127.0.0.1:8983/solr/dch-web 这个是正式的 core0是测试的索引库
-solr.Url=http://42.123.123.211:8983/solr/core0
-mq.url=tcp://42.123.123.211:61616
-#solr.Url=http://10.33.3.68:8983/solr/core0
-#mq.url=tcp://10.33.3.68:61616
+#测试环境10.1.85.36 solr和activemq配置信息
+solr.Url=http://10.1.85.36:8983/solr/core0
+mq.url=tcp://10.33.3.68:61616
+#正式环境大数据平台solr和activemq配置信息
+#solr.Url=http://42.123.123.211:8983/solr/core0
+#mq.url=tcp://42.123.123.211:61616
 solr.maxRetries=1
 solr.connectionTimeout=500
