--- a/dch-template/src/main/resources/mongodb.properties
+++ b/dch-template/src/main/resources/mongodb.properties
@@ -1,5 +1,8 @@
-#mongo.host=10.1.85.21
-mongo.host=10.1.85.36
+#这个是正式的mongo
+mongo.host=10.1.85.21
+#这个是测式10.1.85.36的mongo
+#mongo.host=10.1.85.36
+#mongo.host=127.0.0.1
 mongo.port=27017
 mongo.defaultDbName=test
 mongo.user=test
