1:全文检索查询添加信息所属分类字段 2:热门关键字查询接口提交

--- a/dch-redis/src/main/resources/redis.properties
+++ b/dch-redis/src/main/resources/redis.properties
@@ -1,4 +1,5 @@
-redis.host=127.0.0.1
-#redis.host=10.1.85.36
+#redis.host=127.0.0.1
+#≤‚ ‘ª∑æ≥µƒ≈‰÷√
+redis.host=10.1.85.36
 redis.port=6379
-#redis.password=xxs123456
+redis.password=xxs123456
