--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,8 @@
         <poi.version>3.10-FINAL</poi.version>
         <httpclient.version>4.5.3</httpclient.version>
         <httpcore.version>4.4.1</httpcore.version>
+        <commons.lang.version>2.6</commons.lang.version>
+        <commons.logging.version>1.2</commons.logging.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -130,6 +132,16 @@
                 <groupId>commons-logging</groupId>
                 <artifactId>commons-logging-api</artifactId>
                 <version>${jcl_version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-logging</groupId>
+                <artifactId>commons-logging</artifactId>
+                <version>${commons.logging.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-lang</groupId>
+                <artifactId>commons-lang</artifactId>
+                <version>${commons.lang.version}</version>
             </dependency>
             <dependency>
                 <groupId>log4j</groupId>
