1:添加表单填报论文导入接口

--- a/dch-web/pom.xml
+++ b/dch-web/pom.xml
@@ -64,11 +64,11 @@
             <artifactId>dch-disease</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>com.dch</groupId>-->
-            <!--<artifactId>dch-redis</artifactId>-->
-            <!--<version>1.0-SNAPSHOT</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>com.dch</groupId>
+            <artifactId>dch-redis</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>com.dch</groupId>
             <artifactId>dch-project</artifactId>
@@ -461,7 +461,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>6.0.6</version>
+            <version>8.0.13</version>
         </dependency>
 
 
@@ -566,7 +566,7 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-scratchpad</artifactId>
-            <version>4.0.1</version>
+            <version>${poi.version}</version>
             <scope>test</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.poi/openxml4j -->
@@ -581,7 +581,7 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
-            <version>4.0.1</version>
+            <version>${poi.version}</version>
             <scope>test</scope>
         </dependency>
 
